# Inteli-College-2024-2B-T10-SI08-G02

./: .gitignore  README.md  http.rest
.github/PULL_REQUEST_TEMPLATE/: checklist.md
.github/workflows/: pr-comment.yml
documents/: docs.md
src/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
src/aead/analise-acompanhamento-pcd/: analise-pcd.ipynb
src/aead/analise_doni_viagens_dados/: analise_exploratoria.ipynb
src/aead/analise_ft_ocorrencias/: analise_exploratoria.ipynb
src/aead/consumo_materiais/: consumo_materiais.ipynb  limpeza_consumo.ipynb
src/aead/tratamento/: limpeza_REQ_MAT.ipynb  treat_dmo_anl_vw_estacao.ipynb  treat_falhas.ipynb  treat_req_materiais.ipynb
src/dataapp/: api.py
src/dataapp/config/: connections.py  observability.py  settings.py
src/dataapp/etl/etl_bronze/: extract.py  load.py  transform.py
src/dataapp/frontend/: app.py  config.yaml
src/dataapp/views/: vw_consumo_material_tempo.py  vw_data_mov_qtde_saida.py  vw_historico_qtde_saida.py  vw_history_frequency.py  vw_materiais_estoque_zerado.py  vw_materiais_mais_requisitados.py  vw_materiais_res75.py  vw_resumo_diario_movimentacoes.py  vw_tempo_medio_entrega_por_produto.py
src/tests/: README.md  Readme-test_hist_freq.md  test_api_routes.py  test_connections.py  test_extract.py  test_history_frequency_view.py  test_load.py  test_transform.py  test_vw_materiais_mais_requisitados.py  test_vw_res_dia_mov.py
